<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2025 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <TextView
        style="@style/SideActivityHeaderStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/background" />

    <RadioGroup
        android:id="@+id/background_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp">

        <RadioButton
            android:id="@+id/background_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/background_default"
            android:textColor="?attr/colorOnSurface" />

        <RadioButton
            android:id="@+id/background_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/background_image"
            android:textColor="?attr/colorOnSurface" />

    </RadioGroup>

    <TextView
        android:id="@+id/select_image_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/select_image"
        android:textColor="?attr/colorPrimary"
        android:background="?attr/selectableItemBackground"
        android:visibility="gone" />

</LinearLayout>
