<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2025 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingTop="16dp">

    <TextView
        style="@style/SideActivityHeaderStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <TextView
        android:id="@+id/system_settings_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/system_settings"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp"
        android:background="?attr/selectableItemBackground" />

    <TextView
        android:id="@+id/launcher_settings_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/launcher_settings"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp"
        android:background="?attr/selectableItemBackground" />

</LinearLayout>